cabal-version:      3.0
name:               state-tut
version:            0.1.0.0
synopsis:           State Monad
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Shahzad Naeem
maintainer:         shahzad65naeem@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable state-tut
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        random,
        mtl,
        containers
    hs-source-dirs:   app
    default-language: GHC2021
